<resources>
    <string name="app_name">Androlabs</string>
</resources>