<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recent">Recent</string>
</resources>