<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>

    <string name="settings_general">General</string>
    <string name="settings_general_desc">General application preferences</string>

    <string name="settings_about">About</string>
    <string name="settings_about_desc">Andro Labs</string>
</resources>